<resources>
    <string name="app_name">Balancing Act</string>
    <string name="nav_home">Home</string>
    <string name="nav_exercise">Exercise</string>
    <string name="nav_food">Food</string>
    <string name="action_user">User configuration</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Home fragment</string>

    <string name="food_100g">Values per 100g</string>
    <string name="food_serving">This portion</string>
    <string name="food_name">Description</string>
    <string name="food_brand">Manufacturer</string>
    <string name="food_energy">Energy (kcals)</string>
    <string name="food_salt">Salt</string>
    <string name="food_carbohydrate">Carbohydrate</string>
    <string name="food_protein">Protein</string>
    <string name="food_fat">Fat</string>
    <string name="food_fiber">Fibre</string>
    <string name="food_sugar">Sugar</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_barcode">737628064502</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="blank" />
    <string name="edit_barcode_hint">Enter a product barcode or tap the scan icon</string>
    <string name="food_found">Found food!</string>
    <string name="food_not_found">No results found</string>
    <string name="snack_save_success">Save successful</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="barcode_label">Enter barcode or scan</string>
    <string name="weight_label">Weight (grams)</string>
    <string name="weight">100</string>
    <string name="cancelled">Entry cancelled!</string>
    <string name="label_exercise">Exercise</string>
    <string name="label_duration">Duration (minutes)</string>
    <string name="label_calories">Calories (kcal)</string>
    <string name="label_user_activity">How often do you exercise?</string>
    <string name="label_user_weight">Weight (kg)</string>
    <string name="label_user_height">Height (cm)</string>
    <string name="label_user_age">Age</string>
    <string name="label_user_name">Name</string>
    <string name="user_activity_title">User details</string>
    <string name="fill_all_notification">All fields are required!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="card_label_total">Calories left</string>
    <string name="card_food_image">Food</string>
    <string name="card_exercise_image">Exercise</string>
    <string name="warning_exercise">You must fill in all fields!</string>
    <string name="active_sedentary">Never</string>
    <string name="active_moderate">Weekly</string>
    <string name="active_active">Often</string>
    <string name="active_extreme">Daily</string>
    <string name="date">Date</string>
    <string name="label_user_bmi">Body Mass Index</string>
    <string name="label_user_bmr">Basal Metabolic Rate</string>
    <string name="bmr">BMR</string>
    <string name="quantity">How much to add (g)?</string>
    <string name="add_user_msg">You need to add a user!</string>
    <string name="title_activity_manual_food">Enter food</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_user_for_bmr">Add user!</string>
    <string name="edit_food_name">Name (required)</string>
    <string name="edit_food_brand">Brand name</string>
    <string name="edit_food_quantity">Quantity (g) (required)</string>
    <string name="edit_food_energy">Energy (kcals)(required)</string>
    <string name="edit_food_salt">Salt (g)</string>
    <string name="edit_food_carb">Carb (g)</string>
    <string name="label_edit_food">Please enter the 100g values</string>
    <string name="edit_food_protein">Protein (g)</string>
    <string name="edit_food_fat">Saturated fat (g)</string>
    <string name="edit_food_fibre">Fibre (g)</string>
    <string name="edit_food_sugar">Sugar (g)</string>
    <string name="edit_food_requires">You must enter name, quantity and energy!</string>
    <string name="add_food">Add food</string>
    <string name="balance">Balance</string>
</resources>
