<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/labelUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_user_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp" />

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/blank"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserName" />

            <TextView
                android:id="@+id/labelUserAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/label_user_age"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editUserName"
                android:layout_marginStart="16dp" />

            <EditText
                android:id="@+id/editUserAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/blank"
                app:layout_constraintTop_toBottomOf="@+id/labelUserAge"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/labelUserHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_height"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editUserAge"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/labelUserWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_weight"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editUserAge"
                app:layout_constraintLeft_toLeftOf="@+id/editUserWeight" />

            <EditText
                android:id="@+id/editUserHeight"
                android:layout_width="133dp"
                android:layout_height="0dp"
                android:layout_marginStart="18dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/blank"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserHeight" />

            <EditText
                android:id="@+id/editUserWeight"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/blank"
                app:layout_constraintTop_toBottomOf="@+id/labelUserWeight"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/labelUserActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_activity"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editUserHeight"
                android:layout_marginStart="16dp" />

            <RatingBar
                android:id="@+id/ratingUserActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:numStars="4"
                android:rating="2"
                android:stepSize="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserActivity" />

            <Button
                android:id="@+id/userCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/userSaveButton"
                tools:text="@android:string/cancel"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/userSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/save"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/labelUserBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingUserActivity" />

            <TextView
                android:id="@+id/textUserBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelUserBMI" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</LinearLayout>